<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.data-republic</groupId>
    <artifactId>assessment</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>repo.bodar.com</id>
            <url>http://repo.bodar.com</url>
        </repository>

    </repositories>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cukes.version>1.2.5</cukes.version>
    </properties>

    <dependencies>
        <!-- These are the cucumber dependencies -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- These are the cucumber-junit dependencies -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <version>1.0.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>1.2.4</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.8</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.13.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>3.18.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <forkCount>2</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <!--<plugin>-->
                <!--<groupId>com.github.temyers</groupId>-->
                <!--<artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
                <!--<version>5.0.0</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>generateRunners</id>-->
                        <!--<phase>generate-test-sources</phase>-->
                        <!--<goals>-->
                            <!--<goal>generateRunners</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<glue>-->
                                <!--<package>com.datarepublic.stepdefinitions</package>-->
                            <!--</glue>-->
                            <!--<featuresDirectory>src/test/resources/features/</featuresDirectory>-->
                            <!--<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>-->
                            <!--<plugins>-->
                                <!--<plugin>-->
                                    <!--<name>json</name>-->
                                <!--</plugin>-->
                                <!--<plugin>-->
                                    <!--<name>html</name>-->
                                <!--</plugin>-->
                            <!--</plugins>-->

                            <!--<strict>true</strict>-->
                            <!--&lt;!&ndash; Generate TestNG runners instead of JUnit ones. &ndash;&gt;-->
                            <!--<useTestNG>false</useTestNG>-->
                            <!--&lt;!&ndash; The naming scheme to use for the generated test classes. One-->
                              <!--of 'simple' or 'feature-title' &ndash;&gt;-->
                            <!--<namingScheme>pattern</namingScheme>-->
                            <!--&lt;!&ndash; The class naming pattern to use. Only required/used if naming-->
                              <!--scheme is 'pattern'. &ndash;&gt;-->
                            <!--<namingPattern>Parallel{c}CT</namingPattern>-->
                            <!--&lt;!&ndash; One of [SCENARIO, FEATURE]. SCENARIO generates one runner per-->
                              <!--scenario. FEATURE generates a runner per feature. &ndash;&gt;-->
                            <!--<parallelScheme>SCENARIO</parallelScheme>-->
                            <!--&lt;!&ndash; Specify a custom template for the generated sources (this is a path relative to the project base directory) &ndash;&gt;-->
                            <!--<customVmTemplate>src/test/resources/com/datarepublic/data-republic-test-runner.vm</customVmTemplate>-->
                            <!--<packageName>com.datarepublic.parallel</packageName>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<artifactId>maven-failsafe-plugin</artifactId>-->
                <!--<version>2.20</version>-->
                <!--<configuration>-->
                    <!--<forkCount>2</forkCount>-->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<parallel>classes</parallel>-->
                    <!--<threadCount>2</threadCount>-->
                    <!--<includes>-->
                        <!--<include>**/Parallel*CT.class</include>-->
                    <!--</includes>-->
                    <!--<argLine>-Xmx512m</argLine>-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>integration-test</goal>-->
                            <!--<goal>verify</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <!--<plugin>-->
                <!--<groupId>net.masterthought</groupId>-->
                <!--<artifactId>maven-cucumber-reporting</artifactId>-->
                <!--<version>3.18.0</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>execution</id>-->
                        <!--<phase>verify</phase>-->
                        <!--<goals>-->
                            <!--<goal>generate</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<projectName>data-republic-assessment</projectName>-->
                            <!--<outputDirectory>${project.build.directory}/site/cucumber-report</outputDirectory>-->
                            <!--<jsonFiles>-->
                                <!--&lt;!&ndash; supports wildcard or name pattern &ndash;&gt;-->
                                <!--<param>**/cucumber-parallel/*.json</param>-->
                            <!--</jsonFiles>-->
                            <!--<parallelTesting>true</parallelTesting>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>
